edit Whom, Awards

--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
 					</div>
 					<!-- Counter box 4 -->
 					<div class="col-12 col-sm-6 col-md-4 col-lg-2">
-						<span class="font-weight-light counter margin-0 span-h2">24</span>
-						<span class="font-weight-light margin-0 span-h2">K+</span>
-						<h6 class="font-small font-weight-normal uppercase">Page Views</h6>
+						<span class="font-weight-light counter margin-0 span-h2">9</span>
+						<!--<span class="font-weight-light margin-0 span-h2">+</span>-->
+						<h6 class="font-small font-weight-normal uppercase">Countries/Regions</h6>
 					</div>
 				</div><!-- end row -->
 			</div><!-- end container -->
@@ -206,10 +206,10 @@
 		<div class="row col-spacing-20 margin-top-70">
 			<div class="col-12 col-lg-4">
 				<div class="hoverbox-6 border-radius-0375">
-					<img src="assets/images/pexels-max-fischer-5212345.jpg" alt="">
+					<img src="assets/images/vasily-koloda-8CqDvPuo_kI-unsplash.jpg" alt="">
 					<div class="content">
-						<h5>Educational Circles</h5>
-						<p>Transcript, Diploma,Certificate of achievement, etc…</p>
+						<h5>University</h5>
+						<p>Transcript, Diploma, Offer of Admission, Award Certificate… etc.</p>
 					</div>
 					<div class="hover-content">
 						<a class="button button-lg button-outline-white-2 button-rounded" href="https://meet-global.bnext.com.tw/articles/view/47423">Learn More</a>
@@ -218,11 +218,11 @@
 			</div>
 			<div class="col-12 col-lg-4">
 				<div class="hoverbox-6 border-radius-0375">
-					<img src="assets/images/pexels-david-mcbee-1546168.jpg" alt="">
+					<img src="assets/images/pexels-max-fischer-5212345.jpg" alt="">
 					<!--<img src="assets/images/pexels-timur-saglambilek-87223.jpg" alt="">-->
 					<div class="content">
-						<h5>Real Estate Industry</h5>
-						<p>Architectural plan, Contract , Land Certificates etc…</p>
+						<h5>Educational Institution</h5>
+						<p>Course Certificate, Proof of Completion, Event Certificate, … etc.</p>
 					</div>
 					<div class="hover-content">
 						<a class="button button-lg button-outline-white-2 button-rounded" href="https://twitter.com/e27co/status/1384789870581669892?s=20">Learn More</a>
@@ -231,10 +231,22 @@
 			</div>
 			<div class="col-12 col-lg-4">
 				<div class="hoverbox-6 border-radius-0375">
+					<img src="assets/images/pexels-david-mcbee-1546168.jpg" alt="">
+					<div class="content">
+						<h5>Real Estate</h5>
+						<p>E-contract, Transaction Record, Business Cards, House History...etc.</p>
+					</div>
+					<div class="hover-content">
+						<a class="button button-lg button-outline-white-2 button-rounded" href="#">Learn More</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-12 col-lg-4">
+				<div class="hoverbox-6 border-radius-0375">
 					<img src="assets/images/pexels-zen-chung-5529604.jpg" alt="">
 					<div class="content">
-						<h5>Medical Industry</h5>
-						<p>Medical Record, Medical Certificates,etc…</p>
+						<h5>Agriculture</h5>
+						<p>Proof of Origin, Organic Labels, Fairtrade Certification, … etc.</p>
 					</div>
 					<div class="hover-content">
 						<a class="button button-lg button-outline-white-2 button-rounded" href="#">Learn More</a>
@@ -245,20 +257,8 @@
 				<div class="hoverbox-6 border-radius-0375">
 					<img src="assets/images/pexels-daian-gan-102127.jpg" alt="">
 					<div class="content">
-						<h5>Company</h5>
-						<p>Employment Agreement, Minutes, Serial nuber of products, etc…</p>
-					</div>
-					<div class="hover-content">
-						<a class="button button-lg button-outline-white-2 button-rounded" href="#">Learn More</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-12 col-lg-4">
-				<div class="hoverbox-6 border-radius-0375">
-					<img src="assets/images/pexels-football-wife-1618200.jpg" alt="">
-					<div class="content">
-						<h5>Sports</h5>
-						<p>We collect all kinds of competition records, training records and career achievements of athletes in an incorruptible and reliable system, making it easier to do performance analysis or formulate effective training plans for athletes.</p>
+						<h5>Arts</h5>
+						<p>Ownership Certificate, Evidence of Creation, Auction Record … etc.</p>
 					</div>
 					<div class="hover-content">
 						<a class="button button-lg button-outline-white-2 button-rounded" href="#">Contact Us</a>
@@ -266,18 +266,6 @@
 				</div>
 			</div>
 
-			<div class="col-12 col-lg-4">
-				<div class="hoverbox-6 border-radius-0375">
-					<img src="assets/images/pexels-football-wife-1618200.jpg" alt="">
-					<div class="content">
-						<h5>Compatibility</h5>
-						<p>Please contact us to find out the best way to use our service in your company!</p>
-					</div>
-					<div class="hover-content">
-						<a class="button button-lg button-outline-white-2 button-rounded" href="#">Contact Us</a>
-					</div>
-				</div>
-			</div>
 		</div><!-- end row -->
 		
 	</div><!-- end container -->
@@ -290,7 +278,7 @@
 				<div class="text-center">
 				<div class="row">
 					<div class="col-12 col-sm-12 col-md-12 col-lg-12">
-						<h2 class="font-weight-light margin-0">Awards</h2>
+						<h2 class="font-weight-light margin-0">Recognition</h2>
 					</div>
 				</div>
 				</div><!-- end row -->
@@ -302,7 +290,7 @@
 						</div>
 						<div class="testimonial-content">
 							<h5 class="font-weight-normal margin-top-10">Alibaba Entrepreneurship Fund X HSBC JUMPSTARTER | 2020</h5>
-							<p class="margin-bottom-10">Top 5 Startups & Best Innovation Awards</p>
+							<p class="margin-bottom-10">National Top 5 Startups in the United States & Best Innovation Awards</p>
 						</div>
 					</div>
 					<!-- Testimonial box 2 -->
@@ -312,7 +300,7 @@
 						</div>
 						<div class="testimonial-content">
 							<h5 class="font-weight-normal margin-top-10">Google Hatcher | 2021</h5>
-							<p class="margin-bottom-10">Google Hatcher</p>
+							<p class="margin-bottom-10">Selected Startups in the Incubator of Google</p>
 						</div>
 					</div>
 					<!-- Testimonial box 3 -->
@@ -321,8 +309,8 @@
 							<img src="assets/images/awards_3.png" alt="">
 						</div>
 						<div class="testimonial-content">
-							<h5 class="font-weight-normal margin-top-10">Draper University | 20??</h5>
-							<p class="margin-bottom-10">????????????</p>
+							<h5 class="font-weight-normal margin-top-10">Draper University | 2021</h5>
+							<p class="margin-bottom-10">International 3rd Place</p>
 						</div>
 					</div>
 					<!-- Testimonial box 4 -->
@@ -331,8 +319,8 @@
 							<img src="assets/images/awards_4.png" alt="">
 						</div>
 						<div class="testimonial-content">
-							<h5 class="font-weight-normal margin-top-10">E27 | 20??</h5>
-							<p class="margin-bottom-10">????????????</p>
+							<h5 class="font-weight-normal margin-top-10">E27 | 2020</h5>
+							<p class="margin-bottom-10">Selected Startups in the Singapore Programme</p>
 						</div>
 					</div>
 					<!-- Testimonial box 5 -->
@@ -341,8 +329,8 @@
 							<img src="assets/images/awards_5.png" alt="">
 						</div>
 						<div class="testimonial-content">
-							<h5 class="font-weight-normal margin-top-10">SkyDeck | 20??</h5>
-							<p class="margin-bottom-10">????????????</p>
+							<h5 class="font-weight-normal margin-top-10">SkyDeck | 2020</h5>
+							<p class="margin-bottom-10">Selected Startups in SkyDeck HotDesk Incubator</p>
 						</div>
 					</div>
 
