--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							</ul>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="https://global.turingcerts.com/en/login">Issue Now</a>
+							<a class="nav-link" href="https://global.turingcerts.com/en/login">Sign up as Issuer</a>
 						</li>
 					</ul>
 				</div>
@@ -388,7 +388,8 @@
 				<div class="container">
 					<div class="row align-items-center">
 						<div class="col-12 col-md-6">
-							<h2>Turing Chain Ltd.</h2>
+							<!--<h2>Turing Chain Ltd.</h2>-->
+							<h2>Turing Certs</h2>
 							<ul class="list-inline-dash margin-top-30">
 								<li><a href="information-security-policy.html">Information Security Policy</a></li>
 								<li><a href="privacy-policy.html">Privacy Policy</a></li>
