modify recognition, clients, about, link

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<link href="assets/plugins/font-awesome/css/all.css" rel="stylesheet">
 		<link href="assets/plugins/themify/themify-icons.min.css" rel="stylesheet">
 		<link href="assets/plugins/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+
 	</head>
 	<body data-preloader="1">
 
@@ -47,7 +48,7 @@
 							<a class="nav-link" href="#">News</a>
 							<ul class="nav-dropdown">
 								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="media.html">Media</a></li>
-								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="blog.html">Blog</a></li>
+								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="https://medium.com/turing-chain">Blog</a></li>
 							</ul>
 						</li>
 						<li class="nav-item">
@@ -60,6 +61,7 @@
 					<ul class="list-inline">
 						<li><a href="https://www.facebook.com/turingcerts"><i class="fab fa-facebook-f"></i></a></li>
 						<li><a href="https://www.linkedin.com/company/turing-chain-limited/"><i class="fab fa-linkedin-in"></i></a></li>
+						<li><a href="https://www.crunchbase.com/organization/turing-chain"><i class="fab fa-linkedin-in"></i></a></li>
 					</ul>
 				</div>
 				<!-- Menu Toggle -->
@@ -78,8 +80,8 @@
 						<div class="col-12 col-md-10 offset-md-2 col-lg-8 offset-lg-4 text-md-right">
 							<h1 class="display-6 font-weight-semi-bold margin-0">Zero Fraud, Zero Paper, <br>Sustainable Society</h1>
 							<p>One-stop service to issue, manage, and verify digital credentials on blockchain for everyone.</p>
-							<div class="buttons">
-								<button class="btn-hover color-1">Login</button>
+							<div class="buttons"><a href="https://global.turingcerts.com/en/login">
+								<button class="btn-hover color-1">Login</button></a>
 							</div>
 						</div>
 						<div class="banner-logo col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
@@ -96,7 +98,7 @@
 				<div class="text-center">
 				<div class="row">
 					<div class="col-12 col-sm-12 col-md-12 col-lg-12">
-						<h2 class="font-weight-light margin-bottom-60">Features</h2>
+						<h2 class="font-weight-light margin-bottom-60">Benefits</h2>
 					</div>
 				</div>
 				</div><!-- end row -->
@@ -160,12 +162,12 @@
 					</div>
 					<!-- Counter box 2 -->
 					<div class="col-12 col-sm-6 col-md-4 col-lg-2">
-						<h2 class="font-weight-light counter margin-0">33</h2>
+						<h2 class="font-weight-light counter margin-0">35</h2>
 						<h6 class="font-small font-weight-normal uppercase">Universities</h6>
 					</div>
 					<!-- Counter box 3 -->
 					<div class="col-12 col-sm-6 col-md-4 col-lg-2">
-						<h2 class="font-weight-light counter margin-0">33</h2>
+						<h2 class="font-weight-light counter margin-0">42</h2>
 						<h6 class="font-small font-weight-normal uppercase">Institutes</h6>
 					</div>
 					<!-- Counter box 4 -->
@@ -209,10 +211,10 @@
 					<img src="assets/images/vasily-koloda-8CqDvPuo_kI-unsplash.jpg" alt="">
 					<div class="content">
 						<h5>University</h5>
-						<p>Transcript, Diploma, Offer of Admission, Award Certificate… etc.</p>
+						<p>Transcript, Diploma, Offer of Admission, Award Certificate, etc.</p>
 					</div>
 					<div class="hover-content">
-						<a class="button button-lg button-outline-white-2 button-rounded" href="https://meet-global.bnext.com.tw/articles/view/47423">Learn More</a>
+						<a class="button button-lg button-outline-white-2 button-rounded" href="https://e27.co/turingcerts-combats-fraud-with-blockchain-powered-certificate-validation-20210330/">Learn More</a>
 					</div>
 				</div>
 			</div>
@@ -222,10 +224,10 @@
 					<!--<img src="assets/images/pexels-timur-saglambilek-87223.jpg" alt="">-->
 					<div class="content">
 						<h5>Educational Institution</h5>
-						<p>Course Certificate, Proof of Completion, Event Certificate, … etc.</p>
+						<p>Course Certificate, Proof of Completion, Event Certificate, etc.</p>
 					</div>
 					<div class="hover-content">
-						<a class="button button-lg button-outline-white-2 button-rounded" href="https://twitter.com/e27co/status/1384789870581669892?s=20">Learn More</a>
+						<a class="button button-lg button-outline-white-2 button-rounded" href="https://meet-global.bnext.com.tw/articles/view/47423">Learn More</a>
 					</div>
 				</div>
 			</div>
@@ -234,10 +236,10 @@
 					<img src="assets/images/pexels-david-mcbee-1546168.jpg" alt="">
 					<div class="content">
 						<h5>Real Estate</h5>
-						<p>E-contract, Transaction Record, Business Cards, House History...etc.</p>
+						<p>E-contract, Transaction Record, Business Cards, House History, etc.</p>
 					</div>
 					<div class="hover-content">
-						<a class="button button-lg button-outline-white-2 button-rounded" href="#">Learn More</a>
+						<a class="button button-lg button-outline-white-2 button-rounded" href="https://www.prestigeonline.com/tw/people-events/people/connecting-life-from-technology/">Learn More</a>
 					</div>
 				</div>
 			</div>
@@ -246,10 +248,10 @@
 					<img src="assets/images/pexels-zen-chung-5529604.jpg" alt="">
 					<div class="content">
 						<h5>Agriculture</h5>
-						<p>Proof of Origin, Organic Labels, Fairtrade Certification, … etc.</p>
+						<p>Proof of Origin, Organic Labels, Fairtrade Certification, etc.</p>
 					</div>
 					<div class="hover-content">
-						<a class="button button-lg button-outline-white-2 button-rounded" href="#">Learn More</a>
+						<a class="button button-lg button-outline-white-2 button-rounded" href="https://life.taiwan368.com.tw/article/4/0/107414">Learn More</a>
 					</div>
 				</div>
 			</div>
@@ -258,10 +260,10 @@
 					<img src="assets/images/pexels-daian-gan-102127.jpg" alt="">
 					<div class="content">
 						<h5>Arts</h5>
-						<p>Ownership Certificate, Evidence of Creation, Auction Record … etc.</p>
+						<p>Ownership Certificate, Evidence of Creation, Auction Record, etc.</p>
 					</div>
 					<div class="hover-content">
-						<a class="button button-lg button-outline-white-2 button-rounded" href="#">Contact Us</a>
+						<a class="button button-lg button-outline-white-2 button-rounded" href="https://www.itokimiko.com/post/2021092802">Learn More</a>
 					</div>
 				</div>
 			</div>
@@ -273,7 +275,7 @@
 <!-- end Usage section -->
 
 		<!-- Testimonial Awards section -->
-		<div class="section">
+		<div class="section bg-grey-lighter">
 			<div class="container">
 				<div class="text-center">
 				<div class="row">
@@ -282,7 +284,7 @@
 					</div>
 				</div>
 				</div><!-- end row -->
-				<div class="awards testimonial-grid column-1 margin-top-50">
+				<div class="awards testimonial-grid column-2 margin-top-50">
 					<!-- Testimonial box 1 -->
 					<div class="testimonial-grid-box">
 						<div class="testimonial-img">
@@ -338,47 +340,130 @@
 			</div><!-- end container -->
 		</div>
 		<!-- end Testimonial section -->
-
 		<!-- Clients section -->
-		<div class="section bg-grey-lighter">
+		<div class="section clents-text">
 			<div class="container">
-				<div class="margin-bottom-50 text-center">
-					<div class="row">
-						<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 col-xl-6 offset-xl-3">
+				<div class="margin-bottom-70">
+					<div class="row text-center">
+						<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
 							<h2 class="font-weight-light">Our Clients</h2>
+
 						</div>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-12 col-lg-10 offset-lg-1">
-						<ul class="clients-grid column-4">
-							<li>
-								<a href="#"><img src="assets/images/col-5.jpg" alt=""></a>
-							</li>
-							<li>
-								<a href="#"><img src="assets/images/col-5.jpg" alt=""></a>
-							</li>
-							<li>
-								<a href="#"><img src="assets/images/col-5.jpg" alt=""></a>
-							</li>
-							<li>
-								<a href="#"><img src="assets/images/col-5.jpg" alt=""></a>
-							</li>
-							<li>
-								<a href="#"><img src="assets/images/col-5.jpg" alt=""></a>
-							</li>
-							<li>
-								<a href="#"><img src="assets/images/col-5.jpg" alt=""></a>
-							</li>
-							<li>
-								<a href="#"><img src="assets/images/col-5.jpg" alt=""></a>
-							</li>
-							<li>
-								<a href="#"><img src="assets/images/col-5.jpg" alt=""></a>
-							</li>
-						</ul>
+				<div class="row team-wrapper col-spacing-20">
+					<!-- Team box 1 -->
+					<div class="col-6 col-sm-4 col-lg-3 team-box">
+						<div class="team-img">
+							<img src="assets/images/clients_1.png" alt=""><!-- image source -->
+
+						</div>
+						<div class="margin-bottom-10">
+							<span>Berkeley Law Executive Education</span>
+						</div>
+					</div>
+					<!-- Team box 2 -->
+					<div class="col-6 col-sm-4 col-lg-3 team-box">
+						<div class="team-img">
+							<img src="assets/images/clients_2.png" alt=""><!-- image source -->
+						</div>
+						<div class="margin-bottom-10">
+							<span>LINE TAIWAN PROTOSTAR</span>
+						</div>
+					</div>
+					<!-- Team box 3 -->
+					<div class="col-6 col-sm-4 col-lg-3 team-box">
+						<div class="team-img">
+							<img src="assets/images/clients_3.png" alt=""><!-- image source -->
+						</div>
+						<div class="margin-bottom-10">
+							<span>Erasmus+ in Italy</span>
+						</div>
+					</div>
+					<!-- Team box 4 -->
+					<div class="col-6 col-sm-4 col-lg-3 team-box">
+						<div class="team-img">
+							<img src="assets/images/clients_4.png" alt=""><!-- image source -->
+						</div>
+						<div class="margin-bottom-10">
+							<span>Office of International Affairs, National Taiwan University</span>
+						</div>
+					</div>
+					<!-- Team box 5 -->
+					<div class="col-6 col-sm-4 col-lg-3 team-box">
+						<div class="team-img">
+							<img src="assets/images/clients_5.png" alt=""><!-- image source -->
+						</div>
+						<div class="margin-bottom-10">
+							<span>National Tsing Hua University</span>
+						</div>
+					</div>
+					<!-- Team box 6 -->
+					<div class="col-6 col-sm-4 col-lg-3 team-box">
+						<div class="team-img">
+							<img src="assets/images/clients_6.png" alt=""><!-- image source -->
+	
+						</div>
+						<div class="margin-bottom-10">
+							<span>Code for Japan</span>
+						</div>
+					</div>
+					<!-- Team box 7 -->
+					<div class="col-6 col-sm-4 col-lg-3 team-box">
+						<div class="team-img">
+							<img src="assets/images/clients_7.png" alt=""><!-- image source -->
+						</div>
+						<div class="margin-bottom-10">
+							<span>European University of Cyprus</span>
+						</div>
+					</div>
+					<!-- Team box 8 -->
+					<div class="col-6 col-sm-4 col-lg-3 team-box">
+						<div class="team-img">
+							<img src="assets/images/clients_8.png" alt=""><!-- image source -->
+						</div>
+						<div class="margin-bottom-10">
+							<span>Technological Institute of the Philippines</span>
+						</div>
+					</div>
+					<!-- Team box 9 -->
+					<div class="col-6 col-sm-4 col-lg-3 team-box">
+						<div class="team-img">
+							<img src="assets/images/clients_9.png" alt=""><!-- image source -->
+						</div>
+						<div class="margin-bottom-10">
+							<span>Overseas Community Affairs Council of Taiwan</span>
+						</div>
+					</div>
+					<!-- Team box 10 -->
+					<div class="col-6 col-sm-4 col-lg-3 team-box">
+						<div class="team-img">
+							<img src="assets/images/clients_10.png" alt=""><!-- image source -->
+						</div>
+						<div class="margin-bottom-10">
+							<span>Changhua Christian Hospital Online Medical Education</span>
+						</div>
+					</div>
+					<!-- Team box 11 -->
+					<div class="col-6 col-sm-4 col-lg-3 team-box">
+						<div class="team-img">
+							<img src="assets/images/clients_11.png" alt=""><!-- image source -->
+						</div>
+						<div class="margin-bottom-10">
+							<span>Institute for Information Industry Award Certificate</span>
+						</div>
+					</div>
+					<!-- Team box 12 -->
+					<div class="col-6 col-sm-4 col-lg-3 team-box">
+						<div class="team-img">
+							<img src="assets/images/clients_12.png" alt=""><!-- image source -->
+						</div>
+						<div class="margin-bottom-10">
+							<span>Taoyuan City Government Youth Affair</span>
+						</div>
 					</div>
 				</div><!-- end row -->
+
 			</div><!-- end container -->
 		</div>
 		<!-- end Clients section -->
@@ -405,9 +490,9 @@
 								<a href = "mailto: apac@turingchain.tech">apac@turingchain.tech</a>
 							</ul>
 							<ul class="list-inline-sm icon-sm margin-top-30">
-								<li><a class="button-circle button-circle-sm button-circle-white-3" href="#"><i class="fab fa-facebook-f"></i></a></li>
-								<li><a class="button-circle button-circle-sm button-circle-white-3" href="#"><i class="fab fa-twitter"></i></a></li>
-								<li><a class="button-circle button-circle-sm button-circle-white-3" href="#"><i class="fab fa-instagram"></i></a></li>
+								<li><a class="button-circle button-circle-sm button-circle-white-3" href="https://www.facebook.com/turingcerts"><i class="fab fa-facebook-f"></i></a></li>
+								<li><a class="button-circle button-circle-sm button-circle-white-3" href="https://www.linkedin.com/company/turing-chain-limited/"><i class="fab fa-linkedin-in"></i></a></li>
+								<li><a class="button-circle button-circle-sm button-circle-white-3" href="https://www.crunchbase.com/organization/turing-chain"><i class="fab fa-linkedin-in"></i></a></li>
 							</ul>
 						</div>
 					</div><!-- end row -->
