--- a/about-us.html
+++ b/about-us.html
@@ -72,7 +72,7 @@
 		<!-- Title section-->
 
 		<div class="section-sm bg-grey-lighter">
-			<div class="container text-center">
+			<div class="container text-center title-about">
 				<h3 class="font-family-primary">About Us</h3>
 			</div><!-- end container -->
 		</div>
@@ -112,7 +112,7 @@
 				<div class="row text-center">
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="border-radius padding-30 box-shadow-with-hover">
-							<img class="img-circle-md" src="assets/images/img-circle-medium.jpg" alt="">
+							<img class="img-circle-md" src="assets/images/team_1.png" alt="">
 							<div class="margin-top-30">
 								<h6 class="font-weight-normal margin-0 line-height-140">Jeff Hu</h6>
 								<span class="font-small font-weight-normal">Founder & CEO</span>
@@ -122,7 +122,7 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="border-radius padding-30 box-shadow-with-hover">
-							<img class="img-circle-md" src="assets/images/img-circle-medium.jpg" alt="">
+							<img class="img-circle-md" src="assets/images/team_5.png" alt="">
 							<div class="margin-top-30">
 								<h6 class="font-weight-normal margin-0 line-height-140">Yuffie Hsu</h6>
 								<span class="font-small font-weight-normal">Head of Product</span>
@@ -132,7 +132,7 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="border-radius padding-30 box-shadow-with-hover">
-							<img class="img-circle-md" src="assets/images/img-circle-medium.jpg" alt="">
+							<img class="img-circle-md" src="assets/images/team_6.png" alt="">
 							<div class="margin-top-30">
 								<h6 class="font-weight-normal margin-0 line-height-140">Henry Hang</h6>
 								<span class="font-small font-weight-normal">Tech Lead</span>
@@ -142,7 +142,7 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="border-radius padding-30 box-shadow-with-hover">
-							<img class="img-circle-md" src="assets/images/img-circle-medium.jpg" alt="">
+							<img class="img-circle-md" src="assets/images/team_2.png" alt="">
 							<div class="margin-top-30">
 								<h6 class="font-weight-normal margin-0 line-height-140">Jacky Pan</h6>
 								<span class="font-small font-weight-normal">Security Expert</span>
@@ -152,7 +152,7 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="border-radius padding-30 box-shadow-with-hover">
-							<img class="img-circle-md" src="assets/images/img-circle-medium.jpg" alt="">
+							<img class="img-circle-md" src="assets/images/team_3.png" alt="">
 							<div class="margin-top-30">
 								<h6 class="font-weight-normal margin-0 line-height-140">Yiwei Lin</h6>
 								<span class="font-small font-weight-normal">Head of BD, Southeast Asia</span>
@@ -162,7 +162,7 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="border-radius padding-30 box-shadow-with-hover">
-							<img class="img-circle-md" src="assets/images/img-circle-medium.jpg" alt="">
+							<img class="img-circle-md" src="assets/images/team_4.png" alt="">
 							<div class="margin-top-30">
 								<h6 class="font-weight-normal margin-0 line-height-140">Mari Ishikawa</h6>
 								<span class="font-small font-weight-normal">Head of BD, Japan</span>
