--- a/media.html
+++ b/media.html
@@ -70,7 +70,7 @@
 		<!-- end Header -->
 
 		<div class="section-sm bg-grey-lighter">
-			<div class="container text-center">
+			<div class="container text-center title-about">
 				<h3 class="font-family-primary">Media</h3>
 			</div><!-- end container -->
 		</div>
