edit our team text

--- a/about-us.html
+++ b/about-us.html
@@ -105,7 +105,7 @@
 					<div class="row">
 						<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 col-xl-6 offset-xl-3">
 							<h2 class="font-weight-light">Our Team</h2>
-							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+							<p>We are a team of CISSP security experts, ACM/IEEE blockchain researchers, and experienced product designers from UC Berkeley, NTU Singapore, HKUST, and National Taiwan University.</p>
 						</div>
 					</div>
 				</div>
