update benefits icons

--- a/index.html
+++ b/index.html
@@ -107,33 +107,65 @@
 					
 					<!-- Icon text box 1 -->
 					<div class="col-12 col-md-4">
-						<i class="ti-star text-dark"></i>
-						<h5 class="font-weight-normal margin-top-20">Save cost by 86%</h5>
+						<div class="benefits-img">
+							<img src="assets/images/Benefits-01.png" alt="">
+						</div>
+						<div class="margin-top-20">
+						<span class="span-no">Save cost by </span>
+						<span class="span-xl">86%</span>
+						</div>
 					</div>
 					<!-- Icon text box 2 -->
 					<div class="col-12 col-md-4">
-						<i class="ti-blackboard text-dark"></i>
-						<h5 class="font-weight-normal margin-top-20">Prioritize privacy with GDPR compliance</h5>
+						<div class="benefits-img">
+							<img src="assets/images/Benefits-04.png" alt="">
+						</div>
+						<div class="margin-top-20">
+							<span class="span-no">Prioritize privacy with </span>
+							<span class="span-xl">GDPR</span>
+							<span class="span-no"> compliance</span>
+							</div>
 					</div>
 					<!-- Icon text box 3 -->
 					<div class="col-12 col-md-4">
-						<i class="ti-comment-alt text-dark"></i>
-						<h5 class="font-weight-normal margin-top-20">Reduce paper usage by 100%</h5>
+						<div class="benefits-img">
+							<img src="assets/images/Benefits-05.png" alt="">
+						</div>
+						<div class="margin-top-20">
+							<span class="span-no">Reduce paper usage by </span>
+							<span class="span-xl">100%</span>
+							</div>
 					</div>
 					<!-- Icon text box 4 -->
 					<div class="col-12 col-md-4">
-						<i class="ti-comment-alt text-dark"></i>
-						<h5 class="font-weight-normal margin-top-20">Save time by 50%</h5>
+						<div class="benefits-img">
+							<img src="assets/images/Benefits-02.png" alt="">
+						</div>
+						<div class="margin-top-20">
+							<span class="span-no">Save time by </span>
+							<span class="span-xl">50%</span>
+							</div>
 					</div>
 					<!-- Icon text box 5 -->
 					<div class="col-12 col-md-4">
-						<i class="ti-comment-alt text-dark"></i>
-						<h5 class="font-weight-normal margin-top-20">Protect confidentiality with ISO 27001 license</h5>
+						<div class="benefits-img">
+							<img src="assets/images/Benefits-03.png" alt="">
+						</div>
+						<div class="margin-top-20">
+							<span class="span-no">Protect confidentiality with </span></br>
+							<span class="span-xl">ISO 27001</span>
+							<span class="span-no"> license</span>
+							</div>
 					</div>
 					<!-- Icon text box 6 -->
 					<div class="col-12 col-md-4">
-						<i class="ti-comment-alt text-dark"></i>
-						<h5 class="font-weight-normal margin-top-20">Reduce carbon emission by 98%</h5>
+						<div class="benefits-img">
+							<img src="assets/images/Benefits-06.png" alt="">
+						</div>
+						<div class="margin-top-20">
+							<span class="span-no">Reduce carbon emission by </span>
+							<span class="span-xl">98%</span>
+							</div>
 					</div>
 				</div><!-- end row -->
 			</div><!-- end container -->
