add awards-6, edit menu, fix banner btn RWD center

--- a/about-us.html
+++ b/about-us.html
@@ -32,7 +32,8 @@
 					<img class="logo-dark" src="assets/images/your-logo-dark.png" alt="">
 					<img class="logo-light" src="assets/images/your-logo-light.png" alt=""> 
 					-->
-				</div>
+				</div>				
+				
 				<!-- Menu -->
 				<div class="header-menu">
 					<ul class="nav">
@@ -43,17 +44,17 @@
 							<a class="nav-link" href="#">News</a>
 							<ul class="nav-dropdown">
 								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="media.html">Media</a></li>
-								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="blog.html">Blog</a></li>
+								<!--
+								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="https://medium.com/turing-chain">Blog</a></li>
+								-->
 							</ul>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Cooperation</a>
-							<ul class="nav-dropdown">
-								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="#">Annoucements</a></li>
-							</ul>
+							<a class="nav-link" href="https://global.turingcerts.com/en/login">Sign up as Issuer</a>
 						</li>
 					</ul>
 				</div>
+				
 				<!-- Menu Extra -->
 				<div class="header-menu-extra">
 					<ul class="list-inline">
@@ -122,7 +123,7 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="border-radius padding-30 box-shadow-with-hover">
-							<img class="img-circle-md" src="assets/images/team_5.png" alt="">
+							<img class="img-circle-md" src="assets/images/team_logo.png" alt="">
 							<div class="margin-top-30">
 								<h6 class="font-weight-normal margin-0 line-height-140">Yuffie Hsu</h6>
 								<span class="font-small font-weight-normal">Head of Product</span>
@@ -132,7 +133,7 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="border-radius padding-30 box-shadow-with-hover">
-							<img class="img-circle-md" src="assets/images/team_6.png" alt="">
+							<img class="img-circle-md" src="assets/images/team_logo.png" alt="">
 							<div class="margin-top-30">
 								<h6 class="font-weight-normal margin-0 line-height-140">Henry Hang</h6>
 								<span class="font-small font-weight-normal">Tech Lead</span>
@@ -142,7 +143,7 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="border-radius padding-30 box-shadow-with-hover">
-							<img class="img-circle-md" src="assets/images/team_2.png" alt="">
+							<img class="img-circle-md" src="assets/images/team_logo.png" alt="">
 							<div class="margin-top-30">
 								<h6 class="font-weight-normal margin-0 line-height-140">Jacky Pan</h6>
 								<span class="font-small font-weight-normal">Security Expert</span>
@@ -152,7 +153,7 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="border-radius padding-30 box-shadow-with-hover">
-							<img class="img-circle-md" src="assets/images/team_3.png" alt="">
+							<img class="img-circle-md" src="assets/images/team_logo.png" alt="">
 							<div class="margin-top-30">
 								<h6 class="font-weight-normal margin-0 line-height-140">Yiwei Lin</h6>
 								<span class="font-small font-weight-normal">Head of BD, Southeast Asia</span>
@@ -162,7 +163,7 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="border-radius padding-30 box-shadow-with-hover">
-							<img class="img-circle-md" src="assets/images/team_4.png" alt="">
+							<img class="img-circle-md" src="assets/images/team_logo.png" alt="">
 							<div class="margin-top-30">
 								<h6 class="font-weight-normal margin-0 line-height-140">Mari Ishikawa</h6>
 								<span class="font-small font-weight-normal">Head of BD, Japan</span>
@@ -229,34 +230,41 @@
 		</div>
 		<!-- end Testimonial section -->
 
+		<!-- footer section -->
 		<footer>
 			<div class="section bg-dark">
 				<div class="container">
 					<div class="row align-items-center">
-						<div class="col-12 col-md-6 text-center text-md-left">
-							<h3>mono</h3>
-							<ul class="list-inline-dash margin-top-20">
-								<li><a href="#">FAQ</a></li>
-								<li><a href="#">Careers</a></li>
-								<li><a href="#">Clients</a></li>
+						<div class="col-12 col-md-6">
+							<!--<h2>Turing Chain Ltd.</h2>-->
+							<h2>Turing Certs</h2>
+							<ul class="list-inline-dash margin-top-30">
+								<li><a href="information-security-policy.html">Information Security Policy</a></li>
+								<li><a href="privacy-policy.html">Privacy Policy</a></li>
 							</ul>
-							<p class="margin-top-10">&copy; 2021 FlaTheme, All Rights Reserved.</p>
+							<p class="margin-top-10">&copy; 2021 Turing Chain Limited, All Rights Reserved.</p>
 						</div>
-						<div class="col-12 col-md-6 text-center text-md-right">
+						<div class="col-12 col-md-6 text-md-right">
 							<ul class="list-unstyled">
-								<li>121 King St, Melbourne VIC 3000</li>
-								<li>contact@example.com</li>
+								<!--
+								<li>Rm. 715, 7F, No. 335, Ruiguang Rd, Neihu District, Taipei City, 114</li>
+								-->
+								<a href = "https://g.page/TuringCerts?share">Rm. 715, 7F, No. 335, Ruiguang Rd, Neihu District, Taipei City, 114</a>
+								<a href = "mailto: apac@turingchain.tech">apac@turingchain.tech</a>
 							</ul>
-							<ul class="list-inline-sm icon-sm margin-top-20 margin-lg-top-30">
-								<li><a class="button-circle button-circle-sm button-circle-white-3" href="#"><i class="fab fa-facebook-f"></i></a></li>
-								<li><a class="button-circle button-circle-sm button-circle-white-3" href="#"><i class="fab fa-twitter"></i></a></li>
-								<li><a class="button-circle button-circle-sm button-circle-white-3" href="#"><i class="fab fa-instagram"></i></a></li>
+							<ul class="list-inline-sm icon-sm margin-top-30">
+								<li><a class="button-circle button-circle-sm button-circle-white-3" href="https://www.facebook.com/turingcerts"><i class="fab fa-facebook-f"></i></a></li>
+								<li><a class="button-circle button-circle-sm button-circle-white-3" href="https://www.linkedin.com/company/turing-chain-limited/"><i class="fab fa-linkedin-in"></i></a></li>
+								<!--
+									<li><a class="button-circle button-circle-sm button-circle-white-3" href="https://www.crunchbase.com/organization/turing-chain"><i class="fab fa-linkedin-in"></i></a></li>
+								-->
 							</ul>
 						</div>
 					</div><!-- end row -->
 				</div><!-- end container -->
 			</div>
 		</footer>
+		<!-- End footer section -->
 
 		<!-- Scroll to top button -->
 		<div class="scrolltotop">
