--- a/media.html
+++ b/media.html
@@ -43,17 +43,17 @@
 							<a class="nav-link" href="#">News</a>
 							<ul class="nav-dropdown">
 								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="media.html">Media</a></li>
-								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="blog.html">Blog</a></li>
+								<!--
+								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="https://medium.com/turing-chain">Blog</a></li>
+								-->
 							</ul>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Cooperation</a>
-							<ul class="nav-dropdown">
-								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="#">Annoucements</a></li>
-							</ul>
+							<a class="nav-link" href="https://global.turingcerts.com/en/login">Sign up as Issuer</a>
 						</li>
 					</ul>
 				</div>
+
 				<!-- Menu Extra -->
 				<div class="header-menu-extra">
 					<ul class="list-inline">
