--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 							<a class="nav-link" href="#">News</a>
 							<ul class="nav-dropdown">
 								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="media.html">Media</a></li>
+								<!--
 								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="https://medium.com/turing-chain">Blog</a></li>
+								-->
 							</ul>
 						</li>
 						<li class="nav-item">
@@ -61,7 +63,9 @@
 					<ul class="list-inline">
 						<li><a href="https://www.facebook.com/turingcerts"><i class="fab fa-facebook-f"></i></a></li>
 						<li><a href="https://www.linkedin.com/company/turing-chain-limited/"><i class="fab fa-linkedin-in"></i></a></li>
-						<li><a href="https://www.crunchbase.com/organization/turing-chain"><i class="fab fa-linkedin-in"></i></a></li>
+						<!--
+							<li><a href="https://www.crunchbase.com/organization/turing-chain"><i class="fab fa-linkedin-in"></i></a></li>
+						-->
 					</ul>
 				</div>
 				<!-- Menu Toggle -->
@@ -80,7 +84,7 @@
 						<div class="col-12 col-md-10 offset-md-2 col-lg-8 offset-lg-4 text-md-right">
 							<h1 class="display-6 font-weight-semi-bold margin-0">Zero Fraud, Zero Paper, <br>Sustainable Society</h1>
 							<p>One-stop service to issue, manage, and verify digital credentials on blockchain for everyone.</p>
-							<div class="buttons"><a href="https://global.turingcerts.com/en/login">
+							<div class="buttons buttons-center"><a href="https://global.turingcerts.com/en/login">
 								<button class="btn-hover color-1">Login</button></a>
 							</div>
 						</div>
@@ -187,23 +191,23 @@
 				
 				<div class="row row-space-between margin-top-20">
 					<!-- Counter box 1 -->
-					<div class="col-12 col-sm-6 col-md-4 col-lg-2">
+					<div class="col-12 col-sm-6 col-md-4 col-lg-2 text-center">
 						<span class="font-weight-light counter margin-0 span-h2">23000</span>
 						<span class="font-weight-light margin-0 span-h2">+</span>
 						<h6 class="font-small font-weight-normal uppercase">Certificates</h6>
 					</div>
 					<!-- Counter box 2 -->
-					<div class="col-12 col-sm-6 col-md-4 col-lg-2">
+					<div class="col-12 col-sm-6 col-md-4 col-lg-2 text-center">
 						<h2 class="font-weight-light counter margin-0">35</h2>
 						<h6 class="font-small font-weight-normal uppercase">Universities</h6>
 					</div>
 					<!-- Counter box 3 -->
-					<div class="col-12 col-sm-6 col-md-4 col-lg-2">
+					<div class="col-12 col-sm-6 col-md-4 col-lg-2 text-center">
 						<h2 class="font-weight-light counter margin-0">42</h2>
 						<h6 class="font-small font-weight-normal uppercase">Institutes</h6>
 					</div>
 					<!-- Counter box 4 -->
-					<div class="col-12 col-sm-6 col-md-4 col-lg-2">
+					<div class="col-12 col-sm-6 col-md-4 col-lg-2 text-center">
 						<span class="font-weight-light counter margin-0 span-h2">9</span>
 						<!--<span class="font-weight-light margin-0 span-h2">+</span>-->
 						<h6 class="font-small font-weight-normal uppercase">Countries/Regions</h6>
@@ -215,10 +219,10 @@
 
 				
 		<!-- Parallax Demosite section -->
-		<div class="section-2xl bg-image parallax" data-bg-src="assets/images/background.jpg">
+		<div class="section-2xl bg-image parallax" data-bg-src="assets/images/video_pic.png">
 			<div class="bg-black-02">
 				<div class="container text-center">
-					<a class="button-circle button-circle-xl button-circle-outline-white-2 button-circle-animation-drop icon-xl button-hover-scale lightbox-media-link" href="https://www.youtube.com/watch?v=W-j4QGAgNu8">
+					<a class="button-circle button-circle-xl button-circle-outline-white-2 button-circle-animation-drop icon-xl button-hover-scale lightbox-media-link" href="assets/images/Turing_video.mp4">
 						<i class="ti-control-play"></i>
 					</a>
 				</div><!-- end container -->
@@ -367,6 +371,16 @@
 							<p class="margin-bottom-10">Selected Startups in SkyDeck HotDesk Incubator</p>
 						</div>
 					</div>
+					<!-- Testimonial box 6 -->
+					<div class="testimonial-grid-box">
+						<div class="testimonial-img">
+							<img src="assets/images/awards_6.png" alt="">
+						</div>
+						<div class="testimonial-content">
+							<h5 class="font-weight-normal margin-top-10">JETRO | 2021</h5>
+							<p class="margin-bottom-10">Enterprise Partnership Programme in Japan</p>
+						</div>
+					</div>
 
 				</div>
 			</div><!-- end container -->
@@ -500,6 +514,7 @@
 		</div>
 		<!-- end Clients section -->
 
+		<!-- footer section -->
 		<footer>
 			<div class="section bg-dark">
 				<div class="container">
@@ -524,13 +539,16 @@
 							<ul class="list-inline-sm icon-sm margin-top-30">
 								<li><a class="button-circle button-circle-sm button-circle-white-3" href="https://www.facebook.com/turingcerts"><i class="fab fa-facebook-f"></i></a></li>
 								<li><a class="button-circle button-circle-sm button-circle-white-3" href="https://www.linkedin.com/company/turing-chain-limited/"><i class="fab fa-linkedin-in"></i></a></li>
-								<li><a class="button-circle button-circle-sm button-circle-white-3" href="https://www.crunchbase.com/organization/turing-chain"><i class="fab fa-linkedin-in"></i></a></li>
+								<!--
+									<li><a class="button-circle button-circle-sm button-circle-white-3" href="https://www.crunchbase.com/organization/turing-chain"><i class="fab fa-linkedin-in"></i></a></li>
+								-->
 							</ul>
 						</div>
 					</div><!-- end row -->
 				</div><!-- end container -->
 			</div>
 		</footer>
+		<!-- End footer section -->
 
 		<!-- Scroll to top button -->
 		<div class="scrolltotop">
