--- a/index.html
+++ b/index.html
@@ -222,10 +222,11 @@
 		<div class="section-2xl bg-image parallax" data-bg-src="assets/images/video_pic.png">
 			<div class="bg-black-02">
 				<div class="container text-center">
-					<a class="button-circle button-circle-xl button-circle-outline-white-2 button-circle-animation-drop icon-xl button-hover-scale lightbox-media-link" href="assets/images/Turing_video.mp4">
+					<a class="button-circle button-circle-xl button-circle-outline-white-2 button-circle-animation-drop icon-xl button-hover-scale lightbox-media-link" href="assets/images/Turing_video(s).mp4">
 						<i class="ti-control-play"></i>
 					</a>
-				</div><!-- end container -->
+				</div>
+				<!-- end container -->
 			</div>
 		</div>
 		<!-- end Parallax section -->
