edit footer, fix award_2 png, edit issue link

--- a/about-us.html
+++ b/about-us.html
@@ -50,7 +50,7 @@
 							</ul>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="https://global.turingcerts.com/en/login">Sign up as Issuer</a>
+							<a class="nav-link" href="https://global.turingcerts.com/en/login?role=cc-apply">Sign up as Issuer</a>
 						</li>
 					</ul>
 				</div>
