--- a/information-security-policy.html
+++ b/information-security-policy.html
@@ -34,26 +34,25 @@
 							-->
 						</div>
 						<!-- Menu -->
-						<div class="header-menu">
-							<ul class="nav">
-								<li class="nav-item">
-									<a class="nav-link" href="about-us.html">About Us</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link" href="#">News</a>
-									<ul class="nav-dropdown">
-										<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="media.html">Media</a></li>
-										<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="blog.html">Blog</a></li>
-									</ul>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link" href="#">Cooperation</a>
-									<ul class="nav-dropdown">
-										<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="#">Annoucements</a></li>
-									</ul>
-								</li>
+				<div class="header-menu">
+					<ul class="nav">
+						<li class="nav-item">
+							<a class="nav-link" href="about-us.html">About Us</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">News</a>
+							<ul class="nav-dropdown">
+								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="media.html">Media</a></li>
+								<!--
+								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="https://medium.com/turing-chain">Blog</a></li>
+								-->
 							</ul>
-						</div>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="https://global.turingcerts.com/en/login?role=cc-apply">Sign up as Issuer</a>
+						</li>
+					</ul>
+				</div>
 						<!-- Menu Extra -->
 						<div class="header-menu-extra">
 							<ul class="list-inline">
@@ -132,35 +131,41 @@
 		</div>
 
 
+		<!-- footer section -->
 		<footer>
 			<div class="section bg-dark">
 				<div class="container">
 					<div class="row align-items-center">
 						<div class="col-12 col-md-6">
-							<h3>mono</h3>
+							<!--<h2>Turing Chain Ltd.</h2>-->
+							<h2>Turing Certs</h2>
 							<ul class="list-inline-dash margin-top-30">
-								<li><a href="#">FAQ</a></li>
-								<li><a href="#">About</a></li>
-								<li><a href="#">Contact</a></li>
+								<li><a href="information-security-policy.html">Information Security Policy</a></li>
+								<li><a href="privacy-policy.html">Privacy Policy</a></li>
 							</ul>
-							<p class="margin-top-10">&copy; 2021 FlaTheme, All Rights Reserved.</p>
+							<p class="margin-top-10">&copy; 2021 Turing Chain Limited, All Rights Reserved.</p>
 						</div>
 						<div class="col-12 col-md-6 text-md-right">
 							<ul class="list-unstyled">
-								<li>121 King St, Melbourne VIC 3000</li>
-								<li>contact@example.com</li>
-								<li>+(123) 456 789 01</li>
+								<!--
+								<li>Rm. 715, 7F, No. 335, Ruiguang Rd, Neihu District, Taipei City, 114</li>
+								-->
+								<a href = "https://g.page/TuringCerts?share">Rm. 715, 7F, No. 335, Ruiguang Rd, Neihu District, Taipei City, 114</a>
+								<a href = "mailto: apac@turingchain.tech">apac@turingchain.tech</a>
 							</ul>
-							<ul class="list-inline-sm icon-sm margin-top-20">
-								<li><a class="button-circle button-circle-sm button-circle-outline-white" href="#"><i class="fab fa-facebook-f"></i></a></li>
-								<li><a class="button-circle button-circle-sm button-circle-outline-white" href="#"><i class="fab fa-twitter"></i></a></li>
-								<li><a class="button-circle button-circle-sm button-circle-outline-white" href="#"><i class="fab fa-instagram"></i></a></li>
+							<ul class="list-inline-sm icon-sm margin-top-30">
+								<li><a class="button-circle button-circle-sm button-circle-white-3" href="https://www.facebook.com/turingcerts"><i class="fab fa-facebook-f"></i></a></li>
+								<li><a class="button-circle button-circle-sm button-circle-white-3" href="https://www.linkedin.com/company/turing-chain-limited/"><i class="fab fa-linkedin-in"></i></a></li>
+								<!--
+									<li><a class="button-circle button-circle-sm button-circle-white-3" href="https://www.crunchbase.com/organization/turing-chain"><i class="fab fa-linkedin-in"></i></a></li>
+								-->
 							</ul>
 						</div>
 					</div><!-- end row -->
 				</div><!-- end container -->
 			</div>
 		</footer>
+		<!-- End footer section -->
 
 		<!-- Scroll to top button -->
 		<div class="scrolltotop">
