--- a/media.html
+++ b/media.html
@@ -49,7 +49,7 @@
 							</ul>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="https://global.turingcerts.com/en/login">Sign up as Issuer</a>
+							<a class="nav-link" href="https://global.turingcerts.com/en/login?role=cc-apply">Sign up as Issuer</a>
 						</li>
 					</ul>
 				</div>
@@ -171,30 +171,41 @@
 		</div>
 		<!-- end Blog Posts -->
 
+		<!-- footer section -->
 		<footer>
 			<div class="section bg-dark">
 				<div class="container">
 					<div class="row align-items-center">
-						<div class="col-12 col-md-6 text-center text-md-left">
-							<ul class="list-inline-dash">
-								<li><a href="#">FAQ</a></li>
-								<li><a href="#">Careers</a></li>
-								<li><a href="#">Clients</a></li>
+						<div class="col-12 col-md-6">
+							<!--<h2>Turing Chain Ltd.</h2>-->
+							<h2>Turing Certs</h2>
+							<ul class="list-inline-dash margin-top-30">
+								<li><a href="information-security-policy.html">Information Security Policy</a></li>
+								<li><a href="privacy-policy.html">Privacy Policy</a></li>
 							</ul>
-							<p class="margin-top-10">&copy; 2021 FlaTheme, All Rights Reserved.</p>
+							<p class="margin-top-10">&copy; 2021 Turing Chain Limited, All Rights Reserved.</p>
 						</div>
-						<div class="col-12 col-md-6 text-center text-md-right">
-							<ul class="list-inline">
-								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-								<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-								<li><a href="#"><i class="fab fa-instagram"></i></a></li>
+						<div class="col-12 col-md-6 text-md-right">
+							<ul class="list-unstyled">
+								<!--
+								<li>Rm. 715, 7F, No. 335, Ruiguang Rd, Neihu District, Taipei City, 114</li>
+								-->
+								<a href = "https://g.page/TuringCerts?share">Rm. 715, 7F, No. 335, Ruiguang Rd, Neihu District, Taipei City, 114</a>
+								<a href = "mailto: apac@turingchain.tech">apac@turingchain.tech</a>
+							</ul>
+							<ul class="list-inline-sm icon-sm margin-top-30">
+								<li><a class="button-circle button-circle-sm button-circle-white-3" href="https://www.facebook.com/turingcerts"><i class="fab fa-facebook-f"></i></a></li>
+								<li><a class="button-circle button-circle-sm button-circle-white-3" href="https://www.linkedin.com/company/turing-chain-limited/"><i class="fab fa-linkedin-in"></i></a></li>
+								<!--
+									<li><a class="button-circle button-circle-sm button-circle-white-3" href="https://www.crunchbase.com/organization/turing-chain"><i class="fab fa-linkedin-in"></i></a></li>
+								-->
 							</ul>
 						</div>
 					</div><!-- end row -->
 				</div><!-- end container -->
 			</div>
 		</footer>
+		<!-- End footer section -->
 
 		<!-- Scroll to top button -->
 		<div class="scrolltotop">
