--- a/about-us.html
+++ b/about-us.html
@@ -41,13 +41,11 @@
 							<a class="nav-link" href="about-us.html">About Us</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">News</a>
-							<ul class="nav-dropdown">
+							<a class="nav-link" href="news.html">News</a>
+							<!--<ul class="nav-dropdown">
 								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="media.html">Media</a></li>
-								<!--
 								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="https://medium.com/turing-chain">Blog</a></li>
-								-->
-							</ul>
+							</ul>-->
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="https://global.turingcerts.com/en/login?role=cc-apply">Sign up as Issuer</a>
@@ -182,20 +180,22 @@
 		<div class="section padding-top-0">
 			<div class="container">
 				<div class="margin-bottom-70 text-center">
-					<h6 class="uppercase font-weight-medium">What People Say?</h6>
+					<h2 class="font-weight-light">What People Say</h2>
 				</div>
-				<div class="owl-carousel" data-owl-margin="30" data-owl-xs="1" data-owl-sm="1" data-owl-md="1" data-owl-lg="2" data-owl-xl="2" data-owl-nav="true">
+				<div class="owl-carousel" data-owl-margin="30" data-owl-xs="1" data-owl-sm="1" data-owl-md="1" data-owl-lg="1" data-owl-xl="1" data-owl-nav="true">
 					<!-- Testimonial box 1 -->
 					<div class="border-radius-05 bg-white border-all padding-20 padding-lg-30">
 						<div class="d-lg-flex justify-content-between margin-bottom-10">
 							<div class="d-block d-lg-inline-block margin-bottom-10">
-								<h5 class="font-weight-normal line-height-140 margin-0">Emiley Haley</h5>
-								<span class="font-small font-weight-normal">Manager - Mono</span>
+								<h5 class="font-weight-normal line-height-140 margin-0">Johnny C.J. Wu</h5>
+								<span class="font-small font-weight-normal">Head of Office of International Affairs, National Taiwan University</span>
 							</div>
 						</div>
-						<p>"Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."</p>
+						<p>"Turing Certs is the best blockchain certification provider out there. Thanks to its security, convenience and innovative functions such as its connection to LinkedIn, 
+							it truly bridges the gap for the university to help students create their own digital learning footprints."</p>
 					</div>
 					<!-- Testimonial box 2 -->
+					<!--
 					<div class="border-radius-05 bg-white border-all padding-20 padding-lg-30">
 						<div class="d-lg-flex justify-content-between margin-bottom-10">
 							<div class="d-block d-lg-inline-block margin-bottom-10">
@@ -205,7 +205,9 @@
 						</div>
 						<p>"Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."</p>
 					</div>
+					-->
 					<!-- Testimonial box 3 -->
+					<!--
 					<div class="border-radius-05 bg-white border-all padding-20 padding-lg-30">
 						<div class="d-lg-flex justify-content-between margin-bottom-10">
 							<div class="d-block d-lg-inline-block margin-bottom-10">
@@ -215,7 +217,9 @@
 						</div>
 						<p>"Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."</p>
 					</div>
+					-->
 					<!-- Testimonial box 4 -->
+					<!--
 					<div class="border-radius-05 bg-white border-all padding-20 padding-lg-30">
 						<div class="d-lg-flex justify-content-between margin-bottom-10">
 							<div class="d-block d-lg-inline-block margin-bottom-10">
@@ -225,7 +229,9 @@
 						</div>
 						<p>"Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."</p>
 					</div>
-				</div><!-- end owl-carousel -->
+					-->
+				</div>
+				<!-- end owl-carousel -->
 			</div><!-- end container -->
 		</div>
 		<!-- end Testimonial section -->
