--- a/information-security-policy.html
+++ b/information-security-policy.html
@@ -40,13 +40,11 @@
 							<a class="nav-link" href="about-us.html">About Us</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">News</a>
-							<ul class="nav-dropdown">
+							<a class="nav-link" href="news.html">News</a>
+							<!--<ul class="nav-dropdown">
 								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="media.html">Media</a></li>
-								<!--
 								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="https://medium.com/turing-chain">Blog</a></li>
-								-->
-							</ul>
+							</ul>-->
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="https://global.turingcerts.com/en/login?role=cc-apply">Sign up as Issuer</a>
