update What People Say

--- a/about-us.html
+++ b/about-us.html
@@ -195,17 +195,15 @@
 							it truly bridges the gap for the university to help students create their own digital learning footprints."</p>
 					</div>
 					<!-- Testimonial box 2 -->
-					<!--
 					<div class="border-radius-05 bg-white border-all padding-20 padding-lg-30">
 						<div class="d-lg-flex justify-content-between margin-bottom-10">
 							<div class="d-block d-lg-inline-block margin-bottom-10">
-								<h5 class="font-weight-normal line-height-140 margin-0">Robert Vincent</h5>
-								<span class="font-small font-weight-normal">Marketer - Mono</span>
+								<h5 class="font-weight-normal line-height-140 margin-0">Professor G.Z. Liao</h5>
+								<span class="font-small font-weight-normal">Dean of Institute of Learning Sciences and Technologies, National Tsing Hua University</span>
 							</div>
 						</div>
-						<p>"Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."</p>
+						<p>"Learning begins with the Turing Certs and ends in an endless future."</p>
 					</div>
-					-->
 					<!-- Testimonial box 3 -->
 					<!--
 					<div class="border-radius-05 bg-white border-all padding-20 padding-lg-30">
